--- a/BolsaApi.ipynb
+++ b/BolsaApi.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connect with ExpertAdvisor (MetaTrader) on port 5555 with sockets"
+    "### Connect with ExpertAdvisor (MetaTrader) on port 5555 through sockets"
    ]
   },
   {
